second commit, first excercise solved

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -14,9 +14,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>a203</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>a251</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>a262</td>\n",
+       "      <td>Placebo</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>a275</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>a366</td>\n",
+       "      <td>Stelasyn</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>z435</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>z578</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>z581</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>z795</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>249 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "49      a203    Infubinol  Female        20.0        23.0        NaN   \n",
+       "50      a251    Infubinol  Female        21.0        25.0        NaN   \n",
+       "51      a262      Placebo  Female        17.0        29.0        NaN   \n",
+       "52      a275     Ceftamin  Female        20.0        28.0        NaN   \n",
+       "53      a366     Stelasyn  Female        16.0        29.0        NaN   \n",
+       "..       ...          ...     ...         ...         ...        ...   \n",
+       "245     z435     Propriva  Female        12.0        26.0        NaN   \n",
+       "8       z578     Ramicane    Male        11.0        16.0        NaN   \n",
+       "246     z581    Infubinol  Female        24.0        25.0        NaN   \n",
+       "247     z795     Naftisol  Female        13.0        29.0        NaN   \n",
+       "248     z969     Naftisol    Male         9.0        30.0        NaN   \n",
+       "\n",
+       "     Tumor Volume (mm3)  Metastatic Sites  \n",
+       "49                  NaN               NaN  \n",
+       "50                  NaN               NaN  \n",
+       "51                  NaN               NaN  \n",
+       "52                  NaN               NaN  \n",
+       "53                  NaN               NaN  \n",
+       "..                  ...               ...  \n",
+       "245                 NaN               NaN  \n",
+       "8                   NaN               NaN  \n",
+       "246                 NaN               NaN  \n",
+       "247                 NaN               NaN  \n",
+       "248                 NaN               NaN  \n",
+       "\n",
+       "[249 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,7 +224,231 @@
     "mouse_metadata = pd.read_csv(mouse_metadata_path)\n",
     "study_results = pd.read_csv(study_results_path)\n",
     "\n",
-    "# Combine the data into a single dataset\n"
+    "# Combine the data into a single dataset\n",
+    "\n",
+    "mouse_metadata.head()\n",
+    "\n",
+    "new_dataset = mouse_metadata.append(study_results)\n",
+    "\n",
+    "new_dataset.dtypes\n",
+    "\n",
+    "duplicated_mice = pd.concat(g for _, g in new_dataset.groupby(\"Mouse ID\") if len(g) > 1)\n",
+    "\n",
+    "duplicated_mice\n",
+    "\n",
+    "dedup_mice = duplicated_mice.drop_duplicates(subset =\"Mouse ID\")\n",
+    "\n",
+    "dedup_mice\n",
+    "\n",
+    "#dedup_mice.describe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b128</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f932</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>g107</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a457</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c819</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1888</th>\n",
+       "      <td>r944</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>41.581521</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>u364</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>31.023923</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1890</th>\n",
+       "      <td>p438</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>61.433892</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1891</th>\n",
+       "      <td>x773</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>58.634971</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>b879</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>72.555239</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1893 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mouse ID Drug Regimen  Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0        b128          NaN  NaN         NaN         NaN        0.0   \n",
+       "1        f932          NaN  NaN         NaN         NaN        0.0   \n",
+       "2        g107          NaN  NaN         NaN         NaN        0.0   \n",
+       "3        a457          NaN  NaN         NaN         NaN        0.0   \n",
+       "4        c819          NaN  NaN         NaN         NaN        0.0   \n",
+       "...       ...          ...  ...         ...         ...        ...   \n",
+       "1888     r944          NaN  NaN         NaN         NaN       45.0   \n",
+       "1889     u364          NaN  NaN         NaN         NaN       45.0   \n",
+       "1890     p438          NaN  NaN         NaN         NaN       45.0   \n",
+       "1891     x773          NaN  NaN         NaN         NaN       45.0   \n",
+       "1892     b879          NaN  NaN         NaN         NaN       45.0   \n",
+       "\n",
+       "      Tumor Volume (mm3)  Metastatic Sites  \n",
+       "0              45.000000               0.0  \n",
+       "1              45.000000               0.0  \n",
+       "2              45.000000               0.0  \n",
+       "3              45.000000               0.0  \n",
+       "4              45.000000               0.0  \n",
+       "...                  ...               ...  \n",
+       "1888           41.581521               2.0  \n",
+       "1889           31.023923               3.0  \n",
+       "1890           61.433892               1.0  \n",
+       "1891           58.634971               4.0  \n",
+       "1892           72.555239               2.0  \n",
+       "\n",
+       "[1893 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Checking the number of mice in the DataFrame.\n",
+    "\n",
+    "unique_mice = new_dataset[new_dataset['Mouse ID'].duplicated() == True]\n",
+    "\n",
+    "unique_mice"
    ]
   },
   {
@@ -39,9 +456,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Checking the number of mice in the DataFrame.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -251,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
